# EventTom

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: backend_saqs.yml  backend_sasq.yml  build.yml  dependabot.yml  flutter_build.yml  tests.yml
EventTom/: asgi.py  settings.py  urls.py  wsgi.py
Terraform/: main.tf  variables.tf
backend/: Permissions.py  admin.py  apps.py  consumers.py  injector.py  models.py  permissions.py  routing.py  serializers.py  services.py  signals.py  urls.py  views.py
backend/templates/: Test.html  TestWebsockets.html
backend/tests/: test_intigration.py  test_unit.py
frontend/: pubspec.yaml
frontend/lib/: controller.dart  main.dart  model.dart  view.dart
frontend/test/: controller_test.dart  widget_test.dart
