[tool.poetry]
name = "eventtom"
version = "0.1.0"
description = "Semesterprojekt Softwarearchitektur und Qualitätssicherung"
authors = ["Max Tepper <tepper@th-brandenburg.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
asgiref = "3.8.1"
attrs = "24.3.0"
autobahn = "24.4.2"
automat = "24.8.1"
build = "1.2.2.post1"
cachecontrol = "0.14.1"
certifi = "2024.8.30"
cffi = "1.17.1"
channels = "4.2.0"
channels-redis = "4.2.1"
charset-normalizer = "3.4.0"
cleo = "2.1.0"
colorama = "0.4.6"
constantly = "23.10.4"
crashtest = "0.4.1"
cryptography = "44.0.0"
daphne = "4.1.2"
distlib = "0.3.9"
django = "5.1.4"
django-extensions = "3.2.3"
django-injector = "0.3.1"
djangorestframework = "3.15.2"
djangorestframework-simplejwt = "5.3.1"
dulwich = "0.21.7"
fastjsonschema = "2.21.1"
filelock = "3.16.1"
hyperlink = "21.0.0"
idna = "3.10"
incremental = "24.7.2"
injector = "0.22.0"
installer = "0.7.0"
jaraco-classes = "3.4.0"
keyring = "24.3.1"
more-itertools = "10.5.0"
msgpack = "1.1.0"
packaging = "24.2"
pexpect = "4.9.0"
pkginfo = "1.12.0"
platformdirs = "4.3.6"
poetry = "1.8.5"
poetry-core = "1.9.1"
poetry-plugin-export = "1.8.0"
psycopg = "3.2.3"
psycopg-binary = "3.2.3"
ptyprocess = "0.7.0"
pyasn1 = "0.6.1"
pyasn1-modules = "0.4.1"
pybuilder = "0.13.13"
pycparser = "2.22"
pydotplus = "2.0.2"
pyjwt = "2.10.1"
pyopenssl = "24.3.0"
pyparsing = "3.2.0"
pyproject-hooks = "1.2.0"
python-dotenv = "1.0.1"
pywin32-ctypes = "0.2.3"
rapidfuzz = "3.10.1"
redis = "5.2.1"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
service-identity = "24.2.0"
setuptools = "75.6.0"
shellingham = "1.5.4"
sqlparse = "0.5.2"
tomlkit = "0.13.2"
trove-classifiers = "2024.10.21.16"
twisted = "24.11.0"
txaio = "23.1.1"
typing-extensions = "4.12.2"
tzdata = "2024.2"
urllib3 = "2.2.3"
virtualenv = "20.28.0"
zope-interface = "7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
